--- a/Android Bridge/res/layout/activity_login.xml
+++ b/Android Bridge/res/layout/activity_login.xml
@@ -3,8 +3,10 @@
     android:id="@+id/wrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="32dp"
-    android:paddingRight="32dp"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".LoginActivity" >
     
@@ -33,7 +35,6 @@
        		android:layout_height="wrap_content"
        		android:layout_gravity="right"
             android:singleLine="true"
-            android:contentDescription="@string/enter_login"
             android:text="@string/enter_login" >
         </Button>
     </LinearLayout>
@@ -52,6 +53,7 @@
    	     	android:layout_height="wrap_content"
    	     	android:layout_centerHorizontal="true"
    	     	android:layout_centerVertical="true"
+   	     	android:contentDescription="@string/login_icon"
         	android:src="@drawable/ic_launcher" >
  	   </ImageView>
     </RelativeLayout>
