--- a/Android Bridge/res/layout/activity_game_room.xml
+++ b/Android Bridge/res/layout/activity_game_room.xml
@@ -8,4 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".GameRoomActivity" >
 
+    <ListView
+        android:id="@+id/gameList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@android:color/transparent"
+        android:divider="@color/highlight"
+        android:dividerHeight="1dp" >
+    </ListView>
+    
 </LinearLayout>
