--- a/Android Bridge/res/layout/activity_login.xml
+++ b/Android Bridge/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:background="@color/background"
     tools:context=".LoginActivity" >
     
     <LinearLayout 
@@ -17,7 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:background="@android:color/transparent">
   	 	
         
         <EditText
@@ -45,7 +47,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
-   	    android:layout_above="@+id/linearLayout2" >
+   	    android:layout_above="@+id/linearLayout2"
+        android:background="@android:color/transparent" >
 
  	   <ImageView
     	    android:id="@+id/loginLogo"
@@ -54,7 +57,8 @@
    	     	android:layout_centerHorizontal="true"
    	     	android:layout_centerVertical="true"
    	     	android:contentDescription="@string/login_icon"
-        	android:src="@drawable/ic_launcher" >
+        	android:src="@drawable/ic_launcher"
+        	android:background="@android:color/transparent" >
  	   </ImageView>
     </RelativeLayout>
 
