--- a/Android Bridge/res/layout/activity_login.xml
+++ b/Android Bridge/res/layout/activity_login.xml
@@ -57,8 +57,7 @@
    	     	android:layout_centerHorizontal="true"
    	     	android:layout_centerVertical="true"
    	     	android:contentDescription="@string/login_icon"
-        	android:src="@drawable/ic_launcher"
-        	android:background="@android:color/transparent" >
+        	android:src="@drawable/ic_launcher" >
  	   </ImageView>
     </RelativeLayout>
 
