--- a/Android Bridge/res/layout/activity_login.xml
+++ b/Android Bridge/res/layout/activity_login.xml
@@ -3,53 +3,53 @@
     android:id="@+id/wrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context=".LoginActivity" >
-    
-    <LinearLayout 
+
+    <LinearLayout
         android:id="@+id/linearLayout2"
-        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:background="@android:color/transparent"
         android:gravity="center_horizontal"
-        android:background="@android:color/transparent">
-  	 	
-        
+        android:orientation="vertical" >
+
         <EditText
             android:id="@+id/username"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/prompt_username">
-       		<requestFocus android:layout_width="match_parent" />
+            android:hint="@string/prompt_username"
+            android:inputType="text" >
+
+            <requestFocus android:layout_width="match_parent" />
         </EditText>
 
         <Button
             android:id="@+id/LoginActivity_signin_Button"
             android:layout_width="100dp"
-       		android:layout_height="wrap_content"
-       		android:layout_gravity="right"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:singleLine="true"
             android:text="@string/enter_login" >
         </Button>
     </LinearLayout>
-    
- 	   <ImageView
-    	    android:id="@+id/LoginActivity_logo_Image"
-    	    android:layout_width="wrap_content"
-   	     	android:layout_height="wrap_content"
-   	     	android:layout_centerHorizontal="true"
-   	     	android:layout_centerVertical="true"
-   	     	android:contentDescription="@string/login_icon"
-   	    	android:layout_above="@+id/linearLayout2"
-        	android:src="@drawable/ic_launcher"
-        	android:background="@android:color/transparent" >
- 	   </ImageView>
+
+    <ImageView
+        android:id="@+id/LoginActivity_logo_Image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout2"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/login_icon"
+        android:src="@drawable/ic_launcher" >
+    </ImageView>
 
 </RelativeLayout>
