--- a/Android Bridge/res/layout/activity_game_room.xml
+++ b/Android Bridge/res/layout/activity_game_room.xml
@@ -8,8 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".GameRoomActivity" >
 
-    <ListView
-        android:id="@+id/gameList"
+    <ListView android:id="@+id/GameRoomActivity_gameList"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@android:color/transparent"
