Minor name changes

--- a/Android Bridge/res/layout/activity_game_room.xml
+++ b/Android Bridge/res/layout/activity_game_room.xml
@@ -9,9 +9,9 @@
     tools:context=".GameRoomActivity" >
 
     <ListView
-        android:id="@+id/gameList"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:id="@+id/GameRoomActivity_gameList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:divider="@color/highlight"
         android:dividerHeight="1dp" >
