--- a/Android Bridge/res/layout/activity_login.xml
+++ b/Android Bridge/res/layout/activity_login.xml
@@ -18,17 +18,15 @@
 	
 	    <EditText
 	        android:id="@+id/LoginActivity_usernameText"
-	        android:layout_width="0dp"
+	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:layout_weight="1" />
+	        android:layout_gravity="center"/>
 	
 	    <EditText
 	        android:id="@+id/LoginActivity_passwordText"
-	        android:layout_width="0dp"
+	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:layout_weight="1" />
+	        android:layout_gravity="center"/>
 	
 		<Button
 		    android:id="@+id/LoginActivity_loginButton"
