--- a/Android Bridge/res/layout/activity_login.xml
+++ b/Android Bridge/res/layout/activity_login.xml
@@ -19,12 +19,15 @@
 	    <EditText
 	        android:id="@+id/LoginActivity_usernameText"
 	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"/>
+	        android:layout_height="wrap_content"
+	        android:hint="@string/prompt_username" />
 	
 	    <EditText
 	        android:id="@+id/LoginActivity_passwordText"
 	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"/>
+	        android:layout_height="wrap_content"
+	        android:hint="@string/prompt_password"
+	        android:inputType="textPassword" />
 	
 		<Button
 		    android:id="@+id/LoginActivity_loginButton"
